Fix team page intro text position on IE

--- a/src/components/section/index.css
+++ b/src/components/section/index.css
@@ -336,6 +336,7 @@
     & .Section-inner {
       display: flex;
       flex-direction: column;
+      align-items: center;
       min-height: 100vh;
     }
 
